# python-tidal

./: .gitignore  CODE_OF_CONDUCT.md  HISTORY.rst  MANIFEST.in  Makefile  README.rst  netlify.toml  pylintrc  pyproject.toml  release.sh  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml
docs/: api.rst  conf.py  config.rst  index.rst  installation.rst  login.rst  migration.rst  pages.rst  playlist.rst  requirements.txt
docs/_static/: style.css
docs/_templates/: footer.html  layout.html
examples/: pkce_example.py  pkce_login.py  simple.py  transfer_favorites.py
tests/: __init__.py  conftest.py  cover.py  test_album.py  test_api.py  test_artist.py  test_genres.py  test_media.py  test_mix.py  test_page.py  test_playlist.py  test_session.py  test_user.py
tidalapi/: __init__.py  album.py  artist.py  exceptions.py  genre.py  media.py  mix.py  models.py  page.py  playlist.py  request.py  session.py  types.py  user.py
wimpy/: __init__.py  compat.py  models.py  wimpy.py
