[tool.poetry]
name = "tidalapi"
version = "0.7.1"
description = "Unofficial API for TIDAL music streaming service."
authors = ["Thomas Amland <thomas.amland@googlemail.com>"]
maintainers = ["tehkillerbee <josaksel.dk@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = ["README.rst", "HISTORY.rst"]
homepage = "https://tidalapi.netlify.app"
repository = "https://github.com/tamland/python-tidal"
documentation = "https://tidalapi.netlify.app"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
types-python-dateutil = "^2.8.19.13"
types-requests = "^2.31.0.1"
types-urllib3 = "^1.26.25.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
packages = "tidalapi"
