[tool.poetry]
name = "tidalapi"
version = "0.8.3"
description = "Unofficial API for TIDAL music streaming service."
authors = ["Thomas Amland <thomas.amland@googlemail.com>"]
maintainers = ["tehkillerbee <tehkillerbee@users.noreply.github.com>"]
license = "LGPL-3.0-or-later"
readme = ["README.rst", "HISTORY.rst"]
homepage = "https://tidalapi.netlify.app"
repository = "https://github.com/tamland/python-tidal"
documentation = "https://tidalapi.netlify.app"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
python-dateutil = "^2.8.2"
typing-extensions = "^4.12.2"
ratelimit = "^2.2.1"
isodate = "^0.7.2"
mpegdash = "^0.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
types-python-dateutil = "^2.8.19.13"
types-requests = "^2.31.0.1"
types-urllib3 = "^1.26.25.13"
pytest = "^7.4.0"
keyring = "^24.2.0"
pillow = "^10.0.0"
tox = "^4.6.4"
ffmpeg-python = "^0.2.0"
black = ">=23.3,<25.0"
isort = "^5.12.0"
ruff = "^0.0.277"
docformatter = { extras = ["tomli"], version = "^1.7.3" }
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
packages = "tidalapi"

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
black = true
